fixed sidebar overlap issue on tablet view #2

--- a/less/app/global.less
+++ b/less/app/global.less
@@ -1,8 +1,7 @@
 /* Content */
 
 	#content {
-	  min-width: 800px;
-	  margin-top: 62px;	  
+	  margin-top: 62px;
     margin-left: 225px;
     background: @mp-content-background;
     padding: @mp-content-padding;
