--- a/less/app/pile.less
+++ b/less/app/pile.less
@@ -2,7 +2,6 @@
 
 	#pile-results {
 	  width: 100%;
-	  min-width: 750px;
     box-sizing: content-box;
     display: inline-block;
     margin: 0px;
