--- a/less/app/tablet.less
+++ b/less/app/tablet.less
@@ -9,15 +9,6 @@
   .topbar-logo-name {
     display: none;
   }
-  
-  #sidebar {
-    display: none;
-  }
-
-  #content {
-    min-width: 767px;
-    margin-left: 0px;
-  }
 
   /* Pile */
   #pile-results td.draggable {
